<resources>
    <string name="app_name">screHW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_1">add 1</string>
    <string name="subtract_2">subtract 2</string>
    <string name="add_4">add 4</string>
    <string name="_0">0</string>
    <string name="button">Button</string>
    <string name="add_1_point">add 1 point</string>
    <string name="add_4_points">Add 4 points</string>
    <string name="sub_2_points">sub 2 points</string>
    <string name="total_score">Total Score</string>
</resources>