<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/totalText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b1"
    >

    <TextView
        android:id="@+id/totalScore"
        android:layout_width="176dp"
        android:layout_height="100dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="33sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <Button
        android:id="@+id/button"
        android:layout_width="139dp"

        android:layout_height="51dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="120dp"
        android:text="@string/add_1_point"
        android:fontFamily="@font/architects_daughter"
        android:backgroundTint="@color/b2"
        app:layout_constraintEnd_toEndOf="@+id/totalScore"
        app:layout_constraintTop_toBottomOf="@+id/totalScore" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/add_4_points"
        android:fontFamily="@font/architects_daughter"
        android:backgroundTint="@color/b2"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sub_2_points"
        android:fontFamily="@font/architects_daughter"
        android:backgroundTint="@color/b2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/total_score"
        android:textAllCaps="true"
        android:textSize="34sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/totalScore"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalScore"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>